# unvpp

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  ]
.github/workflows/: cmake-linux.yml  cmake-windows.yml
Testing/: TAG
Testing/20230401-1031/: Test.xml
include/unvpp/: unvpp.h
meshes/: cylinderWithGroupsCoarse.unv  eight_hex_cube.unv
src/: CMakeLists.txt  common.h  element.cpp  group.cpp  main.cpp  mesh.cpp  reader.cpp  reader.h  stream.cpp  stream.h  units.cpp  unvpp.cpp
test/: CMakeLists.txt  unv-report.cpp
tests/: CMakeLists.txt  test_reader.cpp  test_reader_basics.cpp  test_reader_elements.cpp  test_reader_groups.cpp
tests/meshes/: eight_hex_cube_with_groups.unv  one_hex_cell.unv
utilities/: CMakeLists.txt  unv-report.cpp
